[project]
name = "gp100l"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuki Nishidate", email = "yuki18425@gmail.com" }
]
dependencies = [
    "taichi>=1.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gp100l"]
